Fixed some alignment issues in modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -486,14 +486,15 @@ i {
 }
 
 .modal__content img {
-  height: 50%;
+  height: 100%;
+  max-height: 550px;
   border: 2px solid #000;
   padding: 8px;
   border-radius: 4px;
 }
 
 .modal__content-img-container {
-  height: 50%;
+  height: 90%;
 }
 
 .button-container {
@@ -609,14 +610,25 @@ button:hover, button:focus, button:active {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  width: 80%;
   margin: auto;
   height: 90%;
   background: #e6e6e6;
   position: fixed;
   top: 5%;
-  left: 25%;
+  left: 10%;
   border-radius: 8px;
+}
+.modal__content-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  position: absolute;
+  top: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
