--- a/scss/componants/_images.scss
+++ b/scss/componants/_images.scss
@@ -27,14 +27,15 @@ i {
 
 
 .modal__content img {
-    height: 50%;
+    height: 100%;
+    max-height: 550px;
     border: 2px solid $black;
     padding: 8px;
     border-radius: 4px;
 }
 
 .modal__content-img-container {
-    height: 50%;
+    height: 90%;
 }
 
 // @each $image, $background in $bg-images {
