--- a/scss/componants/_modal.scss
+++ b/scss/componants/_modal.scss
@@ -8,12 +8,20 @@
 
 .modal__content {
     @include flex($dir: column, $align: center);
-    width: 50%;
+    width: 80%;
     margin: auto;
     height: 90%;
     background: darken($white, 10%);
     position: fixed;
     top: 5%;
-    left: 25%;
+    left: 10%;
     border-radius: 8px;
+    &-container {
+        @include flex($dir: row, $align: center, $just: space-around);
+        width: 100%;
+        height:100%;
+        overflow: scroll;
+        position: absolute;
+        top: 0;
+    }
 }
